<resources>
    <string name="app_name">ChatApp</string>

    <string name="SignInLink">Sign In to Continue</string>
    <string name="MainGoToChat">See Your Messages</string>
    <string name="LogOut">Sign Out of ChatApp</string>
    <string name="UpdateProfile">Update Your Profile</string>

    <string name="ProfileUpdatePhotoUpdate">Update Your Profile Picture</string>
    <string name="ProfileUpdateNameUpdate">Edit Your Display Name</string>
    <string name="ProfileUpdateHeading">Update Your Profile</string>
    <string name="ProfileUpdateFriendHeading">Friend Zone</string>

    <string name="ProfileUpdateFriendsFriendListLabel">Number of Friends</string>
    <string name="btnProfileUpdateFriendsFriendListViewFriends">View Your Friends</string>

    <string name="ProfileUpdateFriendsReceivedRequestLabel">Received Requests</string>
    <string name="btnProfileUpdateFriendsReceivedRequest">View Received Requests</string>

    <string name="ProfileUpdateFriendsSentRequestLabel">Sent Requests</string>
    <string name="btnProfileUpdateFriendsSentRequest">View Sent Requests</string>

    <string name="btnProfileUpdateFindFriends">Find New Friends</string>

    <string name="btnUpdateNameSubmit">Change UserName</string>

    <string name="UpdateDpHeading">Update Your Profile Picture</string>
    <string name="btnUpdateDpChoose">Choose Photo</string>
    <string name="btnUpdateDpUpload">Upload</string>
    <string name="btnUpdateDpRemove">Remove Photo</string>

    <string name="FindFriendsHeading">Find New Friends</string>
    <string name="ViewSentRequestsHeading">View Sent Requests</string>
    <string name="ViewReceivedRequestsHeading">View Received Requests</string>
    <string name="ViewFriendsHeading">View Your Friends List</string>

    <string name="NotificationChannelName">Notification Channel</string>
    <string name="NotificationChannelDescription">Channel Description</string>

    <string name="FriendsListItemGoToChat">Go to Chat</string>

    <string name="InputMessageChatActivity">Enter The Message</string>
    <string name="btnSendMessageChatActivity">Send Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
